--- a/csapp/package.json
+++ b/csapp/package.json
@@ -11,11 +11,15 @@
 	},
 	"devDependencies": {
 		"@brainandbones/skeleton": "^0.76.0",
+		"@popperjs/core": "^2.11.6",
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "next",
 		"@tailwindcss/forms": "^0.5.3",
 		"@tailwindcss/typography": "^0.5.8",
 		"autoprefixer": "^10.4.13",
+		"classnames": "^2.3.2",
+		"flowbite": "^1.5.4",
+		"flowbite-svelte": "^0.28.1",
 		"postcss": "^8.4.19",
 		"prettier": "^2.6.2",
 		"prettier-plugin-svelte": "^2.7.0",
